@startuml

title __SERVICE's Class Diagram__\n

  namespace io.radien.ms.ecm {
    namespace service {
      class io.radien.ms.ecm.service.ContentService {
          {static} - log : Logger
          {static} - serialVersionUID : long
          + countByTagName()
          + delete()
          + getAppDesc()
          + getAppDescriptions()
          + getAppInfoId()
          + getByContentType()
          + getByContentType()
          + getByContentType()
          + getByViewId()
          + getByViewIdLanguage()
          + getChildrenFiles()
          + getContentVersions()
          + getDocumentTreeModel()
          + getFactory()
          + getFolderContents()
          + getNotificationIdByType()
          + getNotificationIdByTypeAndLanguage()
          + getOrCreateDocumentsPath()
          + loadFile()
          + loadFile()
          + save()
          + search()
      }
    }
  }
  

  namespace io.radien.ms.ecm {
    namespace service {
      class io.radien.ms.ecm.service.I18NPropertyService {
          - documentTemplate : DocumentTemplate
          + delete()
          + getAll()
          + getByKey()
          + getKeys()
          + getLocalizedMessage()
          + initializeProperties()
          + save()
          + save()
          - saveOrUpdate()
      }
    }
  }
  

  io.radien.ms.ecm.service.ContentService .up.|> io.radien.api.service.ecm.ContentServiceAccess
  io.radien.ms.ecm.service.ContentService o-- io.radien.ms.ecm.ContentRepository : contentRepository
  io.radien.ms.ecm.service.ContentService o-- io.radien.ms.ecm.factory.ContentFactory : factory
  io.radien.ms.ecm.service.I18NPropertyService .up.|> io.radien.ms.ecm.client.services.SystemI18NPropertyService
  io.radien.ms.ecm.service.I18NPropertyService o-- io.radien.api.OAFAccess : oafAccess


 

@enduml
